--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,11 @@
         android:theme="@style/Theme.BERASAI"
         tools:targetApi="31">
         <activity
+            android:name=".BantuanActivity"
+            android:exported="false"
+            android:label="@string/title_activity_bantuan"
+            android:theme="@style/Theme.BERASAI.NoActionBar" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name">
