--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,9 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
     implementation 'com.google.android.material:material:1.5.0'
+    implementation 'dev.priyankvasa.android:cameraview-ex:3.5.5-alpha'
+    implementation 'org.tensorflow:tensorflow-lite:1.13.1'
+    implementation 'androidx.camera:camera-view:1.2.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
