- Add Klasifikasi.kt, Deteksi.kt, and assets

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,11 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'dev.priyankvasa.android:cameraview-ex:3.5.5-alpha'
-    implementation 'org.tensorflow:tensorflow-lite:1.13.1'
+    implementation 'androidx.camera.camera2:camera2:1.2.1'
+    implementation 'androidx.camera.lifecycle:camera-lifecycle:1.0.0'
+    implementation 'androidx.camera.view:camera-view:1.0.0-alpha31'
+    implementation 'org.tensorflow:tensorflow-lite:2.5.0'
+    implementation 'androidx.camera:camera-core:1.2.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
