- Add detection through GaleriActivity.kt

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    aaptOptions {
+        noCompress "tflite"
+        noCompress "lite"
+    }
+    packagingOptions {//mencegah duplikasi modul kotlin saat build aplikasi
+        pickFirst 'META-INF/kotlinx-io.kotlin_module'
+        pickFirst 'META-INF/atomicfu.kotlin_module'
+        pickFirst 'META-INF/kotlinx-coroutines-io.kotlin_module'
+    }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -47,11 +56,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'dev.priyankvasa.android:cameraview-ex:3.5.5-alpha'
-    implementation 'androidx.camera.camera2:camera2:1.2.1'
-    implementation 'androidx.camera.lifecycle:camera-lifecycle:1.0.0'
-    implementation 'androidx.camera.view:camera-view:1.0.0-alpha31'
     implementation 'org.tensorflow:tensorflow-lite:2.5.0'
-    implementation 'androidx.camera:camera-core:1.2.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
