--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,11 @@ android {
 }
 
 dependencies {
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
+
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
 
     def camerax_version = "1.1.0-alpha10"
     implementation 'androidx.core:core-ktx:1.7.0'
