--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,10 +59,12 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
     implementation 'com.google.android.material:material:1.5.0'
     implementation "dev.priyankvasa.android:cameraview-ex:3.5.5-alpha"
-    implementation "androidx.camera:camera-core:$camerax_version"
-    implementation "androidx.camera:camera-camera2:$camerax_version"
+    implementation 'androidx.camera:camera-camera2:1.3.0-alpha07'
+    implementation 'androidx.camera:camera-lifecycle:1.3.0-alpha07'
+    implementation 'androidx.camera:camera-view:1.3.0-alpha07'
+    //noinspection GradleDependency
     implementation "androidx.camera:camera-lifecycle:$camerax_version"
-    implementation "androidx.camera:camera-view:1.0.0-alpha29"
+    implementation "androidx.camera:camera-view:1.3.0-alpha07"
     implementation 'org.tensorflow:tensorflow-lite:2.5.0'
     implementation 'com.squareup.okhttp3:okhttp:4.9.3'
     testImplementation 'junit:junit:4.13.2'
