--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,13 +59,15 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
     implementation 'com.google.android.material:material:1.5.0'
     implementation "dev.priyankvasa.android:cameraview-ex:3.5.5-alpha"
-    implementation 'androidx.camera:camera-camera2:1.3.0-alpha07'
-    implementation 'androidx.camera:camera-lifecycle:1.3.0-alpha07'
-    implementation 'androidx.camera:camera-view:1.3.0-alpha07'
-    //noinspection GradleDependency
-    implementation "androidx.camera:camera-lifecycle:$camerax_version"
-    implementation "androidx.camera:camera-view:1.3.0-alpha07"
     implementation 'org.tensorflow:tensorflow-lite:2.5.0'
+    implementation ("com.github.bumptech.glide:glide:4.15.1") {
+        exclude group: "com.android.support"
+    }
+    annotationProcessor 'androidx.annotation:annotation:1.6.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.15.0'
+    implementation ("com.github.bumptech.glide:glide:4.15.1@aar") {
+        transitive = true
+    }
     implementation 'com.squareup.okhttp3:okhttp:4.9.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
