--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:dist="http://schemas.android.com/apk/distribution"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:dist="http://schemas.android.com/apk/distribution">
 
     <dist:module dist:instant="true" />
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.CAMERA"  />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
@@ -39,9 +38,11 @@
         </activity>
 
         <activity
-            android:name=".detection.GaleriActivity"/>
+            android:name=".detection.GaleriActivity"
+            android:screenOrientation="portrait"/>
         <activity
-            android:name=".detection.KameraActivity"/>
+            android:name=".detection.KameraActivity"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".ui.info.AboutActivity"
             android:exported="false" />
