--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,16 @@ pluginManagement {
         google()
         jcenter()
         gradlePluginPortal()
+        maven{
+            url = uri("https://maven.pkg.jetbrains.space/public/p/ktor/eap")
+        }
+    }
+    resolutionStrategy {
+        eachPlugin {
+            if (requested.id.id.startsWith("com.google.cloud.tools.appengine")) {
+                useModule("com.google.cloud.tools:appengine-gradle-plugin:${requested.version}")
+            }
+        }
     }
 }
 dependencyResolutionManagement {
